--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -804,3 +804,18 @@ skill_hanbingdongqi: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_001.mp
 skill_hanbingbaofa: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
 skill_hanbinghujia: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
 skill_hanbingtuji: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_xueqiu: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_001.mp3'
+skill_yuandingyiji: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_002.mp3'
+skill_tixueqiu: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_003.mp3'
+skill_bingzhili: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_002.mp3'
+skill_baonuan: 'https://seer2-resource.yuuinih.com/sound/skill/10_3_002.mp3'
+skill_bingxuanyiji: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_003.mp3'
+skill_huijiachifan: 'https://seer2-resource.yuuinih.com/sound/skill/10_3_003.mp3'
+skill_bingxuechongji: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_002.mp3'
+skill_juxingxueqiu: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_001.mp3'
+skill_shuangdongchongji: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_002.mp3'
+skill_bingshuangdaxueqiu: 'https://seer2-resource.yuuinih.com/sound/skill/10740.mp3'
+skill_tongganyindiao: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_003.mp3'
+skill_binghuzhiwu: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_003.mp3'
+skill_jisuyiji: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_002.mp3'
+skill_quzhuhanyi: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_001.mp3'
