--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -229,3 +229,4 @@ mark_leishenjuexing: 'https://seer2-resource.yuuinih.com/png/markImage/3213.png'
 mark_dongqifuti: 'https://seer2-resource.yuuinih.com/png/markImage/3120.png'
 mark_hanbinghujia: 'https://seer2-resource.yuuinih.com/png/markImage/4010.png'
 mark_fansheguike: 'https://seer2-resource.yuuinih.com/png/markImage/4009.png'
+mark_huijiachifan: 'https://seer2-resource.yuuinih.com/png/markImage/3130.png'
