--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -312,3 +312,8 @@
   tags: [ability]
   effect:
     - effect_ability_enhance_atk_when_spa_enhanced
+- id: mark_ability_penti
+  config: *ability_config
+  tags: [ability]
+  effect:
+    - effect_ability_fixed_damage_15_when_has_penti
