--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -230,3 +230,7 @@ mark_dongqifuti: 'https://seer2-resource.yuuinih.com/png/markImage/3120.png'
 mark_hanbinghujia: 'https://seer2-resource.yuuinih.com/png/markImage/4010.png'
 mark_fansheguike: 'https://seer2-resource.yuuinih.com/png/markImage/4009.png'
 mark_huijiachifan: 'https://seer2-resource.yuuinih.com/png/markImage/3130.png'
+mark_penti: "https://seer2-resource.yuuinih.com/png/markImage/3095.png"
+mark_qianglipenti: "https://seer2-resource.yuuinih.com/png/markImage/3096.png"
+mark_chaojipenti: "https://seer2-resource.yuuinih.com/png/markImage/3097.png"
+mark_fasibilei: "https://seer2-resource.yuuinih.com/png/markImage/3098.png"
