--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -819,3 +819,19 @@ skill_tongganyindiao: 'https://seer2-resource.yuuinih.com/sound/skill/10_2_003.m
 skill_binghuzhiwu: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_003.mp3'
 skill_jisuyiji: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_002.mp3'
 skill_quzhuhanyi: 'https://seer2-resource.yuuinih.com/sound/skill/10_1_001.mp3'
+skill_houtuiti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_yiling: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_yigenfasi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_shatuihouti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_dantuofeng: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_fasizhenci: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_003.mp3'
+skill_yizhi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_lianggenfasi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_003.mp3'
+skill_shatuizhonghouti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_001.mp3'
+skill_shuangtuofeng: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
+skill_fasilianshe: 'https://seer2-resource.yuuinih.com/sound/skill/01_2_002.mp3'
+skill_baozhatou: 'https://seer2-resource.yuuinih.com/sound/skill/10502.mp3'
+skill_sangenfasi: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_002.mp3'
+skill_jisuhouti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_002.mp3'
+skill_shachenhoutuiti: 'https://seer2-resource.yuuinih.com/sound/skill/01_1_003.mp3'
+skill_fasibilei: 'https://seer2-resource.yuuinih.com/sound/skill/01_3_001.mp3'
