--- a/data/effect_ability.yaml
+++ b/data/effect_ability.yaml
@@ -1519,3 +1519,29 @@
         evaluator:
           type: same
           value: spa
+# 喷嚏: 有喷嚏类印记时,造成固定15点伤害
+- id: effect_ability_fixed_damage_15_when_has_penti
+  trigger: OnBeforeCalculateDamage
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfBeDamaged
+      - type: evaluate
+        target:
+          base: selfMarks
+          chain:
+            - type: whereAttr
+              extractor:
+                type: base
+                arg: tags
+              evaluator:
+                type: contain
+                tag: penti
+        evaluator:
+          type: exist
+  apply:
+    type: addModified
+    target: damageContext
+    delta: 15
+    percent: 0
