--- a/data/mark_emblem.yaml
+++ b/data/mark_emblem.yaml
@@ -302,3 +302,8 @@
   tags: [emblem]
   effect:
     - effect_emblem_raise_spd_1_stage_when_baonuan_20_percent
+- id: mark_emblem_fasi
+  config: *emblem_config
+  tags: [emblem]
+  effect:
+    - effect_emblem_no_rage_cost_for_fasi_skills
